fixtures/cell_env/invalid/07_expired_unsafe.sea
Cell "ExpiredUnsafe"
    @profile "python-agent-v1"
